--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "react_starter",
+  "name": "react_auth_demo",
   "version": "1.1.0",
-  "description": "Starting setup for react redux project",
+  "description": "Demo auth project in react, redux, react-router, and Redux form",
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
     "build": "webpack --config webpack.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
+  "author": "Uzair Ashraf",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/uzair-ashraf/redux-playground.git"
   },
   "dependencies": {
     "react": "^16.9.0",
