changed project to be setup correctly

--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "url": "https://github.com/uzair-ashraf/redux-playground.git"
   },
   "dependencies": {
+    "materialize-css": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
